apps/retail-banking/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: retail-banking
  labels:
    istio-injection: enabled
