apps/retail-banking/account.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-svc
  namespace: retail-banking
spec:
  selector:
    app: account-svc
  ports:
    - name: http
      port: 8082
      targetPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-svc
  namespace: retail-banking
  labels:
    app: account-svc
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-svc
  template:
    metadata:
      labels:
        app: account-svc
        version: v1
    spec:
      serviceAccountName: account-svc
      containers:
        - name: account
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9090
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
