apps/retail-banking/bank-statement.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-statement-svc
  namespace: retail-banking
spec:
  selector:
    app: bank-statement-svc
  ports:
    - name: http
      port: 8083
      targetPort: 9093
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-statement-svc
  namespace: retail-banking
  labels:
    app: bank-statement-svc
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-statement-svc
  template:
    metadata:
      labels:
        app: bank-statement-svc
        version: v1
    spec:
      serviceAccountName: bank-statement-svc
      containers:
        - name: bank-statement-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9093
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
